error bar system fully implemented. smoothing issues completely fixed, although the length still needs to be a factor of the total simulation steps. everything is implemented in parallel. On-wards!

--- a/IA-Parallel-Testing.ipynb
+++ b/IA-Parallel-Testing.ipynb
@@ -183,6 +183,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[] [0 1 2 3 4 5 6 7 8 9]\n",
+      "[[0. 1. 2. 3. 4. 5. 6. 7. 8. 9.]]\n",
+      "[[0. 1. 2. 3. 4. 5. 6. 7. 8. 9.]\n",
+      " [0. 1. 2. 3. 4. 5. 6. 7. 8. 9.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "a = np.empty((0,10))\n",
+    "b=np.array(list(range(10)))\n",
+    "print(a,b)\n",
+    "a=np.vstack((a,b))\n",
+    "print(a)\n",
+    "a=np.vstack((a,b))\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
