NFW profile added. Parallelized version. Additional checks needed for the simulation.

--- a/IA-Parallel-Testing.ipynb
+++ b/IA-Parallel-Testing.ipynb
@@ -753,10 +753,53 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "174.28940686250036"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from ia_geometry_func import *\n",
+    "rad_to_deg(RZ_to_Theta(np.array([[0.1,-1]])))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.4142135623730951 -45.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=np.array([[1,-1]])\n",
+    "[[r,theta]] = Cart_to_Polar(a)\n",
+    "print(r,rad_to_deg(theta))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Polar_to_eps()"
+   ]
   }
  ],
  "metadata": {
