saving before moving on to using a data structure that contains the x and y data in each files. This is to reduce possible errors. there are still issues with density in this committed version.

--- a/General_Condition_IA_Sim_v6.ipynb
+++ b/General_Condition_IA_Sim_v6.ipynb
@@ -291,7 +291,11 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -697,6 +701,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.19091883092036782"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "0.27/np.sqrt(2)"
+   ]
+  },
+  {
    "cell_type": "raw",
    "metadata": {},
    "source": [
@@ -739,7 +764,7 @@
     "###############################################################################################################\n",
     "#\n",
     "def baR_func(x,y,z,global_r,global_theta,global_phi): \n",
-    "    return baR_0\n",
+    "    return baR_0+np.random.normal(0,0)\n",
     "\n",
     "def theta_func(x,y,z,global_r,global_theta,global_phi,std): \n",
     "    #### GAUSSIAN NOISE\n",
