density graph completely fixed. various bug fix. NFW completely enabled. now ready to adapt different profiles quickly.

--- a/execution_func.ipynb
+++ b/execution_func.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing execution_func.py\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile execution_func.py\n",
     "def get_axis_lin(n):\n",
