--- a/ia_geometry_func.ipynb
+++ b/ia_geometry_func.ipynb
@@ -9,7 +9,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting ia_geometry_func.py\n"
+      "Writing ia_geometry_func.py\n"
      ]
     }
    ],
